--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Introducing Snap.svg</title>
+    <meta http-equiv="Content-Type" content="text/xml; charset=UTF-8" />
+    <title>Romain Cayzac</title>
     <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
     <script src="js/main.js"></script>
-    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
